syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GenerateOpenApiJson(GenerateOpenApiJsonRequest) returns (GenerateOpenApiJsonResponse);
}
message GenerateOpenApiJsonRequest{
	string ServerAddress =1;
	string fileName = 2;
}

message GenerateOpenApiJsonResponse{
	bool Successful = 1;
  string Message = 2;
  
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
